--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -11,6 +11,20 @@ services:
       - network
     expose:
       - '4000'
+  db:
+    container_name: '${PROJECT_NAME}-db'
+    image: postgres:13-alpine
+    env_file:
+      - .env
+    environment:
+      - POSTGRES_HOST_AUTH_METHOD=trust
+    volumes:
+      - postgres:/var/lib/postgresql/data
+      - ./init-database.sh:/docker-entrypoint-initdb.d/init-database.sh
+    ports:
+      - ${POSTGRES_PORT:-5432}:${POSTGRES_PORT:-5432}
+    restart: unless-stopped
+    command: -p ${POSTGRES_PORT:-5432}
 
 networks:
   network:
