--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 COPY package*.json ./
 COPY prisma ./prisma
 COPY scripts/start.js ./scripts/
-
+COPY docker/.env ./docker/.env
 RUN npm install
 
 COPY . .
@@ -21,5 +21,6 @@ COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/prisma ./prisma
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/scripts ./scripts
+COPY --from=builder /app/docker/.env .env
 
 CMD ["node", "scripts/start.js"]
